{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 77,
  "lineage": "5ecf49c3-84d7-290f-5174-1913801aedab",
  "resources": [
    {
      "module": "module.vpc_ec2_s3",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dfcb1ef8550277af",
            "arn": "arn:aws:ec2:us-east-1:528519205020:instance/i-0f02b0081a7ee8e35",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f02b0081a7ee8e35",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f149e48838bbd123",
            "private_dns": "ip-10-0-1-108.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d5aaf4a0e3434a6b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3dc7cebaace3c73",
            "tags": {
              "Name": "pitambar bhadra",
              "Owner": "pitambar.bhadra@cloudeq.com",
              "Purpose": "training"
            },
            "tags_all": {
              "Name": "pitambar bhadra",
              "Owner": "pitambar.bhadra@cloudeq.com",
              "Purpose": "training"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "pitambar",
              "Owner": "pitambar.bhadra@cloudeq.com",
              "Purpose": "training"
            },
            "vpc_security_group_ids": [
              "sg-0389e135d23b6fc74"
            ]
          },
          "dependencies": [
            "module.vpc_ec2_s3.aws_subnet.subnet",
            "module.vpc_ec2_s3.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ec2_s3",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pitambar-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528519205020:internet-gateway/igw-0c80b6275a156ff0a",
            "id": "igw-0c80b6275a156ff0a",
            "owner_id": "528519205020",
            "tags": {
              "Name": "pitambar-subnet",
              "Owner": "pitambar.bhadra@cloudeq.com",
              "Purpose": "training"
            },
            "tags_all": {
              "Name": "pitambar-subnet",
              "Owner": "pitambar.bhadra@cloudeq.com",
              "Purpose": "training"
            },
            "vpc_id": "vpc-08c979819454ad6d5"
          },
          "dependencies": [
            "module.vpc_ec2_s3.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ec2_s3",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pitambar-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528519205020:route-table/rtb-02a49c3a34c816c8f",
            "id": "rtb-02a49c3a34c816c8f",
            "owner_id": "528519205020",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c80b6275a156ff0a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pitambar-route",
              "Owner": "pitambar.bhadra@cloudeq.com",
              "Purpose": "training"
            },
            "tags_all": {
              "Name": "pitambar-route",
              "Owner": "pitambar.bhadra@cloudeq.com",
              "Purpose": "training"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c979819454ad6d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ec2_s3.aws_internet_gateway.pitambar-gateway",
            "module.vpc_ec2_s3.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ec2_s3",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pitambar-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094fd43e940f7c560",
            "route_table_id": "rtb-02a49c3a34c816c8f",
            "subnet_id": "subnet-0c3dc7cebaace3c73"
          },
          "dependencies": [
            "module.vpc_ec2_s3.aws_internet_gateway.pitambar-gateway",
            "module.vpc_ec2_s3.aws_route_table.pitambar-route",
            "module.vpc_ec2_s3.aws_subnet.subnet",
            "module.vpc_ec2_s3.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ec2_s3",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pitambar-security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528519205020:security-group/sg-0ccdb22d4a3a4d0da",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ccdb22d4a3a4d0da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230228070640384900000001",
            "name_prefix": "terraform-",
            "owner_id": "528519205020",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pitambar-security",
              "Owner": "pitambar.bhadra@cloudeq.com",
              "Purpose": "training"
            },
            "tags_all": {
              "Name": "pitambar-security",
              "Owner": "pitambar.bhadra@cloudeq.com",
              "Purpose": "training"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c979819454ad6d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ec2_s3.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ec2_s3",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528519205020:subnet/subnet-0c3dc7cebaace3c73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3dc7cebaace3c73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528519205020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pitambar bhadra",
              "Owner": "pitambar.bhadra@cloudeq.com",
              "Purpose": "training"
            },
            "tags_all": {
              "Name": "pitambar bhadra",
              "Owner": "pitambar.bhadra@cloudeq.com",
              "Purpose": "training"
            },
            "vpc_id": "vpc-08c979819454ad6d5"
          },
          "dependencies": [
            "module.vpc_ec2_s3.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ec2_s3",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528519205020:vpc/vpc-08c979819454ad6d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-010a96bc3e8a1f209",
            "default_route_table_id": "rtb-0947fec4b8237e9c9",
            "default_security_group_id": "sg-0389e135d23b6fc74",
            "dhcp_options_id": "dopt-085ce0fb7e8ab7937",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08c979819454ad6d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0947fec4b8237e9c9",
            "owner_id": "528519205020",
            "tags": {
              "Name": "pitambar bhadra",
              "Owner": "pitambar.bhadra@cloudeq.com",
              "Purpose": "training"
            },
            "tags_all": {
              "Name": "pitambar bhadra",
              "Owner": "pitambar.bhadra@cloudeq.com",
              "Purpose": "training"
            }
          }
        }
      ]
    }
  ]
}